--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{{name}}</title>
+<title>Recipe Blender</title>
 
 <link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
-<!-- Your HTML goes here -->
+<div id="app" />
 
 <script src="js/{{name}}.{{version}}{{#production}}.min{{/production}}.js"></script>
-
