--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,17 @@
 <!doctype HTML>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Recipe Box</title>
 
-<title>Recipe Blender</title>
+        <link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Caveat|Pavanam|Permanent+Marker" rel="stylesheet">
+    </head>
+    <body>
+        <div id="app" />
 
-<link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-
-<div id="app" />
-
-<script src="js/{{name}}.{{version}}{{#production}}.min{{/production}}.js"></script>
+        <script src="js/{{name}}.{{version}}{{#production}}.min{{/production}}.js"></script>
+    </body>
+</html>
