--- a/client/splash.html
+++ b/client/splash.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Dosis|Coda+Caption:800|Anton|Pragati+Narrow:700" rel="stylesheet">
+        <title>Welcome to the Recipe Box</title>
+
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-        <title>Welcome To Your Future Self</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Caveat|Pavanam|Permanent+Marker" rel="stylesheet">
     </head>
     <body>
         <div id="splash"> </div>
