--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
 
         <link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Caveat|Pavanam|Permanent+Marker" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     </head>
     <body>
         <div id="app" />
